Secondarily commit about changing the Java version to 17